# src/backend/src/api/routes/v1/coach.ts
@@ -4,10 +4,12 @@ import { Router } from 'express';
 
 const router = Router();
 
-router.get("/:coachId", controller.getCoachData)
+router.get("/", controller.getCoachs)
+router.post("/", controller.createCoach)
+router.get("/:coachId", controller.getCoachById)
 router.delete("/:coachId", controller.deleteCoach)
 router.patch("/:coachId", controller.patchCoach)
-router.get("/:coachId/swimmers", controller.getSwimmersFromCoach)
+router.get("/:coachId/swimmers", controller.findSwimmerByCoachId)
 router.post("/:coachId/swimmers", controller.createSwimmersForCoach)
 
 export default router
