# src/backend/src/api/routes/v1/swimmer.ts
@@ -4,6 +4,7 @@ import { Router } from 'express';
 
 const router = Router();
 
+router.get("/", controller.getSwimmers)
 router.patch("/:swimmerId", controller.patchSwimmer)
 router.delete("/:swimmerId", controller.deleteSwimmer)
 router.get("/:swimmerId/trainings", controller.getTrainingFromSwimmer)
